@@ -48,6 +48,7 @@
     + Fix Consistency of VARCHAR Size on 'owner' column across tables (#2136);
     + Fix Subnet details - Filter button missing when compressed range is used (#2353);
     + Fix slow page load times with linked addresses (#2324);
+    + Fix " - is required" error when adding IPs with an empty IP filter set (#2334);
     + API:
         + Fix inconsistent API success value returned (#2045);
 
